syntax = "proto3";
package payment.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service ItemService {
  //  should named List but it conflicts with the List from the ReserveService in a generated openapi spec
  rpc ItemList(ItemListRequest) returns (ItemListResponse) {
    option (google.api.http) = {get: "/api/v1/warehouse/item"};
  }
}

message ItemListRequest {}

message ItemListResponse {
  repeated Item accounts = 1;
}

message Item {
  string id = 1;
  int32 amount = 2;
  int32 reserved = 3;
  google.protobuf.Timestamp updatedAt = 4;
}
